migrate android app to androidx and kotlin

--- a/projects/android/Sample/app/src/main/res/layout/fragment_todo_list.xml
+++ b/projects/android/Sample/app/src/main/res/layout/fragment_todo_list.xml
@@ -1,31 +1,32 @@
 <?xml version="1.0" encoding="utf-8"?>
-<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:tools="http://schemas.android.com/tools"
-    android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    tools:context=".ui.fragment.TodoListFragment">
-
-    <include layout="@layout/toolbar" />
-
-    <RelativeLayout
+<RelativeLayout
+        xmlns:android="http://schemas.android.com/apk/res/android"
+        xmlns:tools="http://schemas.android.com/tools"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:layout_below="@id/toolbar">
+        tools:context=".ui.fragment.TodoListFragment">
 
-        <include layout="@layout/view_list_default" />
+    <include layout="@layout/toolbar"/>
+
+    <RelativeLayout
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:layout_below="@id/toolbar">
+
+        <include layout="@layout/view_list_default"/>
 
     </RelativeLayout>
 
     <RelativeLayout
-        android:id="@+id/main_view"
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:layout_below="@id/toolbar">
-
-        <android.support.v7.widget.RecyclerView
-            android:id="@+id/rv_list"
+            android:id="@+id/main_view"
             android:layout_width="match_parent"
-            android:layout_height="match_parent" />
+            android:layout_height="match_parent"
+            android:layout_below="@id/toolbar">
+
+        <androidx.recyclerview.widget.RecyclerView
+                android:id="@+id/rv_list"
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"/>
 
     </RelativeLayout>
 
