android and ios native http client and some refactoring

--- a/projects/android/Sample/app/src/main/res/layout/toolbar.xml
+++ b/projects/android/Sample/app/src/main/res/layout/toolbar.xml
@@ -1,5 +1,4 @@
-<androidx.appcompat.widget.Toolbar
-        xmlns:android="http://schemas.android.com/apk/res/android"
+<androidx.appcompat.widget.Toolbar xmlns:android="http://schemas.android.com/apk/res/android"
         xmlns:app="http://schemas.android.com/apk/res-auto"
         android:id="@+id/toolbar"
         android:layout_width="match_parent"
@@ -13,12 +12,12 @@
             android:layout_height="wrap_content"
             android:layout_gravity="start"
             android:textColor="@color/white"
-            android:textSize="20sp"/>
+            android:textSize="20sp" />
 
     <ImageView
             android:id="@+id/iv_toolbar_logo"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_gravity="center"/>
+            android:layout_gravity="center" />
 
 </androidx.appcompat.widget.Toolbar>
