--- a/projects/android/Sample/app/src/main/res/layout/fragment_main.xml
+++ b/projects/android/Sample/app/src/main/res/layout/fragment_main.xml
@@ -1,6 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<RelativeLayout
-        xmlns:android="http://schemas.android.com/apk/res/android"
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
         xmlns:app="http://schemas.android.com/apk/res-auto"
         xmlns:tools="http://schemas.android.com/tools"
         android:layout_width="match_parent"
@@ -14,13 +13,13 @@
             android:layout_alignParentBottom="true"
             android:background="?android:attr/windowBackground"
             app:labelVisibilityMode="labeled"
-            app:menu="@menu/navigation"/>
+            app:menu="@menu/navigation" />
 
     <com.ezored.sample.ui.viewpager.CustomViewPager
             android:id="@+id/main_view_pager"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             android:layout_above="@+id/navigation"
-            android:layout_alignParentTop="true"/>
+            android:layout_alignParentTop="true" />
 
 </RelativeLayout>
