--- a/projects/android/Sample/app/src/main/res/layout/list_item_simple_option.xml
+++ b/projects/android/Sample/app/src/main/res/layout/list_item_simple_option.xml
@@ -1,6 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<RelativeLayout
-        xmlns:android="http://schemas.android.com/apk/res/android"
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:background="?android:attr/selectableItemBackground"
@@ -19,7 +18,7 @@
             android:layout_marginEnd="12dp"
             android:layout_marginRight="12dp"
             android:adjustViewBounds="true"
-            android:contentDescription="@string/app_name"/>
+            android:contentDescription="@string/app_name" />
 
     <TextView
             android:id="@+id/tv_title"
@@ -28,6 +27,6 @@
             android:layout_centerVertical="true"
             android:layout_toEndOf="@+id/iv_icon"
             android:layout_toRightOf="@+id/iv_icon"
-            android:text="@string/app_name"/>
+            android:text="@string/app_name" />
 
 </RelativeLayout>
