--- a/projects/android/Sample/app/src/main/res/layout/list_item_todo.xml
+++ b/projects/android/Sample/app/src/main/res/layout/list_item_todo.xml
@@ -1,6 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<RelativeLayout
-        xmlns:android="http://schemas.android.com/apk/res/android"
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
         xmlns:app="http://schemas.android.com/apk/res-auto"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
@@ -31,7 +30,7 @@
                     android:layout_gravity="center_vertical"
                     android:contentDescription="@string/app_name"
                     android:tint="@color/black"
-                    app:srcCompat="@drawable/ic_item_off"/>
+                    app:srcCompat="@drawable/ic_item_off" />
 
         </LinearLayout>
 
@@ -46,7 +45,7 @@
                     android:layout_height="wrap_content"
                     android:layout_marginBottom="10dp"
                     android:text="@string/app_name"
-                    android:textSize="13sp"/>
+                    android:textSize="13sp" />
 
             <TextView
                     android:id="@+id/tv_title"
@@ -54,7 +53,7 @@
                     android:layout_height="wrap_content"
                     android:layout_marginBottom="10dp"
                     android:text="@string/app_name"
-                    android:textSize="13sp"/>
+                    android:textSize="13sp" />
 
             <TextView
                     android:id="@+id/tv_body"
@@ -62,14 +61,14 @@
                     android:layout_height="wrap_content"
                     android:layout_marginBottom="10dp"
                     android:text="@string/app_name"
-                    android:textSize="13sp"/>
+                    android:textSize="13sp" />
 
             <TextView
                     android:id="@+id/tv_created_at"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:text="@string/app_name"
-                    android:textSize="13sp"/>
+                    android:textSize="13sp" />
 
         </LinearLayout>
 
