--- a/projects/android/Sample/app/src/main/res/layout/view_error.xml
+++ b/projects/android/Sample/app/src/main/res/layout/view_error.xml
@@ -1,5 +1,4 @@
-<RelativeLayout
-        xmlns:android="http://schemas.android.com/apk/res/android"
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
         xmlns:app="http://schemas.android.com/apk/res-auto"
         android:id="@+id/error_view"
         android:layout_width="match_parent"
@@ -18,7 +17,7 @@
                 android:layout_width="64dp"
                 android:layout_height="64dp"
                 android:tint="@color/red_800"
-                app:srcCompat="@drawable/ic_error"/>
+                app:srcCompat="@drawable/ic_error" />
 
         <TextView
                 android:id="@+id/tv_message"
@@ -30,7 +29,7 @@
                 android:paddingEnd="30dp"
                 android:text="@string/app_name"
                 android:textColor="@color/black"
-                android:textSize="14sp"/>
+                android:textSize="14sp" />
 
     </LinearLayout>
 
