--- a/projects/android/Sample/app/src/main/res/layout/view_loading.xml
+++ b/projects/android/Sample/app/src/main/res/layout/view_loading.xml
@@ -1,5 +1,4 @@
-<RelativeLayout
-        xmlns:android="http://schemas.android.com/apk/res/android"
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
         android:id="@+id/loading_view"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
@@ -9,6 +8,6 @@
             android:id="@+id/pbLoadingView"
             android:layout_width="64dp"
             android:layout_height="64dp"
-            android:layout_centerInParent="true"/>
+            android:layout_centerInParent="true" />
 
 </RelativeLayout>
