--- a/projects/android/Sample/app/src/main/res/menu/todo_list_menu.xml
+++ b/projects/android/Sample/app/src/main/res/menu/todo_list_menu.xml
@@ -1,6 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<menu
-        xmlns:android="http://schemas.android.com/apk/res/android"
+<menu xmlns:android="http://schemas.android.com/apk/res/android"
         xmlns:app="http://schemas.android.com/apk/res-auto">
 
     <item
@@ -8,6 +7,6 @@
             android:icon="@drawable/ic_search"
             android:title="@string/search_title"
             app:actionViewClass="androidx.appcompat.widget.SearchView"
-            app:showAsAction="always|collapseActionView"/>
+            app:showAsAction="always|collapseActionView" />
 
 </menu>
