--- a/projects/ios/Sample/Sample-AppleWatch/Base.lproj/Interface.storyboard
+++ b/projects/ios/Sample/Sample-AppleWatch/Base.lproj/Interface.storyboard
@@ -1,16 +1,29 @@
-<?xml version="1.0" encoding="UTF-8" standalone="no"?>
-<document type="com.apple.InterfaceBuilder.WatchKit.Storyboard" version="3.0" toolsVersion="11134" targetRuntime="watchKit" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" colorMatched="YES" initialViewController="3mp-fW-waa">
+<?xml version="1.0" encoding="UTF-8"?>
+<document type="com.apple.InterfaceBuilder.WatchKit.Storyboard" version="3.0" toolsVersion="17701" targetRuntime="watchKit" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" colorMatched="YES" initialViewController="3mp-fW-waa">
+    <device id="watch38"/>
     <dependencies>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="11106"/>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBWatchKitPlugin" version="11055"/>
+        <deployment identifier="watchOS"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="17703"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBWatchKitPlugin" version="17500"/>
     </dependencies>
     <scenes>
-        <!--Interface Controller-->
+        <!--Home Hosting Controller-->
         <scene sceneID="aou-V4-d1y">
             <objects>
-                <hostingController id="3mp-fW-waa" customClass="HostingController"
-                customModuleProvider="target"/>
+                <hostingController id="3mp-fW-waa" customClass="HomeHostingController" customModule="Sample_AppleWatch_Extension">
+                    <connections>
+                        <segue destination="4Aq-kE-e1t" kind="relationship" relationship="nextPage" id="LR1-De-tPb"/>
+                    </connections>
+                </hostingController>
             </objects>
+            <point key="canvasLocation" x="-125" y="-50"/>
+        </scene>
+        <!--Settings Hosting Controller-->
+        <scene sceneID="2cH-6G-8vp">
+            <objects>
+                <hostingController id="4Aq-kE-e1t" customClass="SettingsHostingController" customModule="Sample_AppleWatch_Extension"/>
+            </objects>
+            <point key="canvasLocation" x="163" y="-44"/>
         </scene>
     </scenes>
 </document>
