--- a/projects/android/Sample/app/src/main/res/values/colors.xml
+++ b/projects/android/Sample/app/src/main/res/values/colors.xml
@@ -1,13 +1,13 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <color name="color_primary">#F44336</color>
-    <color name="color_primary_dark">#B71C1C</color>
-    <color name="color_accent">#F44336</color>
+    <color name="color_primary">#D21601</color>
+    <color name="color_primary_dark">#870E00</color>
+    <color name="color_accent">#D21601</color>
 
-    <color name="button_background_color">#F44336</color>
+    <color name="button_background_color">#D21601</color>
     <color name="button_focused_background_color">#D32F2F</color>
 
-    <color name="list_item_icon_color">#F44336</color>
+    <color name="list_item_icon_color">#D21601</color>
 
     <color name="black">#000000</color>
     <color name="white">#FFFFFF</color>
