--- a/projects/android/Sample/app/src/main/res/values/styles.xml
+++ b/projects/android/Sample/app/src/main/res/values/styles.xml
@@ -5,6 +5,7 @@
         <item name="colorPrimaryDark">@color/color_primary_dark</item>
         <item name="colorAccent">@color/color_accent</item>
         <item name="alertDialogTheme">@style/AlertDialog</item>
+        <item name="android:windowBackground">@color/color_primary_dark</item>
     </style>
 
     <style name="AppTheme.NoActionBar" parent="Theme.AppCompat.Light.NoActionBar">
@@ -13,6 +14,7 @@
         <item name="colorPrimaryDark">@color/color_primary_dark</item>
         <item name="colorAccent">@color/color_accent</item>
         <item name="alertDialogTheme">@style/AlertDialog</item>
+        <item name="android:windowBackground">@color/color_primary_dark</item>
     </style>
 
     <style name="AppTheme.NoActionBar.WithSearch" parent="Theme.AppCompat.Light.NoActionBar">
