--- a/projects/android/Sample/app/src/main/res/xml/network_security_config.xml
+++ b/projects/android/Sample/app/src/main/res/xml/network_security_config.xml
@@ -1,4 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <network-security-config>
     <base-config cleartextTrafficPermitted="false" />
+    <domain-config cleartextTrafficPermitted="true">
+        <domain includeSubdomains="true">0.0.0.0</domain>
+    </domain-config>
 </network-security-config>
